# research-project

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  setup.sh
data/: README.md
docs/: README.md
notebooks/: research_demo.py
scripts/: process_data.py  run_monitor.sh
src/research_project/: __init__.py  analyzer.py  data_loader.py  preprocessor.py  visualizer.py
src/rogue_ap_detection/: __init__.py  cli.py  detector.py  pcap_analyzer.py  utils.py
tests/: test_detector.py  test_research_project.py
