[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rogue-ap-detector"
version = "0.1.0"
description = "A Python-based system for rogue AP detection in WPA3 networks."
authors = [{ name = "Ehtisham Ali" }]
requires-python = ">=3.9"
dependencies = [
  "scapy>=2.5.0",
  "click>=8.1.7",
  "PyYAML>=6.0.1",
  "rich>=13.7.1",
  "tqdm>=4.66.4",
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "scikit-learn>=1.5.1"
]

[project.scripts]
rogue-ap-detector = "rogue_ap_detector.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["rogue_ap_detector*"]
