[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rogue-ap-detection"
version = "0.1.0"
description = "Detect rogue Wi‑Fi access points and wireless attacks using 802.11 heuristics with Scapy."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ehtisham Ali" }]
dependencies = [
  "scapy>=2.5.0",
  "click>=8.1.0",
  "rich>=13.7.0"
]

[project.scripts]
rogue-ap-detect = "rogue_ap_detection.cli:main"

[tool.setuptools.packages.find]
where = ["src"]